[TOOLS-4411] Datatype Mapping & Data Export
http://jira.cubrid.org/browse/TOOLS-4411

- datatype mapping adjustment
- data export handler
- UI
- configuration

--- a/com.cubrid.cubridmigration.app/plugin.xml
+++ b/com.cubrid.cubridmigration.app/plugin.xml
@@ -95,6 +95,12 @@
       </page>
       <page
             category="com.cubrid.cubridmigration.ui.preference.MigrationConfigPage"
+            class="com.cubrid.cubridmigration.ui.preference.Informix2CUBRIDTypeMapPage"
+            id="com.cubrid.cubridmigration.ui.preference.Informix2CUBRIDTypeMapPage"
+            name="Informix&gt;&gt;CUBRID">
+      </page>
+      <page
+            category="com.cubrid.cubridmigration.ui.preference.MigrationConfigPage"
             class="com.cubrid.cubridmigration.ui.preference.CUBRID2CUBRIDTypeMapPage"
             id="com.cubrid.cubridmigration.ui.preference.CUBRID2CUBRIDTypeMapPage"
             name="CUBRID&gt;&gt;CUBRID">
