--- a/com.cubrid.common.configuration/build.properties
+++ b/com.cubrid.common.configuration/build.properties
@@ -1,6 +1,5 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
-               build.properties,\
-               lib/commons-lang-2.6.jar
+				lib/commons-lang-2.6.jar,\
+               .
