--- a/com.cubrid.cubridmigration.app.feature/feature.properties
+++ b/com.cubrid.cubridmigration.app.feature/feature.properties
@@ -1,6 +1,6 @@
-featureName=CUBRID Tools Common Update Features
+featureName=CUBRID Migration Tool App Features
 providerName=CUBRID
-description=CUBRID Tools Common Update Feature
+description=CUBRID Migration Tool App Feature
 copyright=Copyright (C) 2014 Search Solution Corporation. All rights reserved by Search Solution.
 licence=BSD Licence\n\
 \n\
