--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
-testd
-.metadata
-bin
+#################
+## Misc
+
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+.settings
+local.properties
+.loadpath
+
+## Maven stuff
+
+target/
+/workspace/
+
+## Eclipse configs
+
 .project
+.classpath
+.settings/
+.metadata
+
+## test
+
+testd
