--- a/com.cubrid.cubridmigration.core/pom.xml
+++ b/com.cubrid.cubridmigration.core/pom.xml
@@ -67,25 +67,25 @@
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
-                <artifactId>org.apache.log4j</artifactId>
-                <version>1.2.13.v200806030600</version>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.13</version>
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
                 <version>3.2.1</version>
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>com.jcraft</groupId>
                 <artifactId>jsch</artifactId>
                 <version>0.1.51</version>
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-core</artifactId>
                 <version>1.1.2</version>
             </dependency>
@@ -97,43 +97,43 @@
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>org.apache.xmlbeans</groupId>
                 <artifactId>xmlbeans</artifactId>
                 <version>2.3.0</version>
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>jexcelapi</groupId>
                 <artifactId>jxl</artifactId>
-                <version>11.2</version>
+                <version>2.4.2</version>
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>org.apache.poi</groupId>
                 <artifactId>poi</artifactId>
-                <version>3.8-20120326</version>
+                <version>3.8</version>
             </dependency>
 
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
-                <version>3.8-20120326</version>
+                <version>3.8</version>
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>org.codehaus.woodstox</groupId>
                 <artifactId>stax2-api</artifactId>
                 <version>3.1.1</version>
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>org.codehaus.woodstox</groupId>
                 <artifactId>woodstox-core-lgpl</artifactId>
                 <version>4.1.2</version>
             </dependency>
             
             <dependency>
-                <groupId>com.cubrid.cubridmigration</groupId>
+                <groupId>net.sf.opencsv</groupId>
                 <artifactId>opencsv</artifactId>
                 <version>2.3</version>
             </dependency>
